--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
+    "oslllo-svg2": "^2.0.2",
     "rollup-plugin-babel": "^4.4.0"
   }
 }
